# amctl

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_ZH.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
.cursor/rules/: kotlin-android.mdc  project.mdc
.github/workflows/: amc-release.yml  app-ci.yml  app-release.yml  cli-ci.yml  cli-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/example/amctl/: AmctlApplication.kt
app/src/main/kotlin/com/example/amctl/di/: AppModule.kt
app/src/main/kotlin/com/example/amctl/mcp/: McpServer.kt  McpStreamableHttpExtension.kt  McpToolException.kt
app/src/main/kotlin/com/example/amctl/rest/: RestServer.kt
app/src/main/kotlin/com/example/amctl/ui/: MainActivity.kt
app/src/main/kotlin/com/example/amctl/utils/: NetworkUtils.kt  PermissionUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
cli/: Cargo.toml  README.md
cli/db/migrations/: 0001_memory.sql
cli/npm/meta/: README.md  package.json
cli/npm/scripts/: prepare-smoke-workroot.mjs
cli/skills/autofish-control/: SKILL.md
cli/src/: artifact.rs  builder.rs  cli.rs  command_outcome.rs  config.rs  core.rs  main.rs  memory.rs  memory_recording.rs  output.rs  runner.rs
cli/src/api/: request.rs
cli/src/commands/: adb.rs  app.rs  connect.rs  memory.rs  mod.rs  observe.rs  verify.rs
cli/src/core/: error_code.rs
cli/src/db/: mod.rs
cli/src/memory/: fingerprint.rs  model.rs  store.rs
docs/: ARCHITECTURE.md  CLI_MEMORY.md  DESIGN-V2-HEADLESS.md  DESIGN-V2-ROM.md  DESIGN.md  PLAN-V2-HEADLESS.md  PLAN-V2.md  PLAN.md  QUICKSTART.md
gradle/: libs.versions.toml  verification-metadata.xml
(+71 files in other folders)
