[package]
name = "amc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.4.7"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0.102"
uuid = { version = "1.22.0", features = ["v4"] }
