[package]
name = "auto-fish-cli"
authors = ["MemohAI"]
version = "0.3.0-rc.1"
edition = "2024"
description = "Deterministic CLI executor for the Autofish Android device control service"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/memohai/Autofish"
homepage = "https://github.com/memohai/Autofish"
keywords = ["android", "cli", "automation", "testing", "agent", "llm"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "af"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
ctrlc = "3.4.7"
crossbeam-channel = "0.5.15"
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0.102"
uuid = { version = "1.22.0", features = ["v4"] }
